# pathway-agentic-rag

./: .env.sample  .gitignore  example.py  pyproject.toml  test_docprocessor.py
agents/: base.py  classifier.py  router.py  tools.py
docprocessor/: processor.py
